# Stud_list

./: CMakeLists.txt  README.MD
data/: student_file_1.txt  student_file_2.txt
src/: client.cpp  server.cpp
src/utils/: FileReader.cpp  FileReader.h  Student.h
